--- a/java.html
+++ b/java.html
@@ -8,19 +8,25 @@
 <body>
     <h1>Hello me</h1>
 <script>
-    // var, let and const
-// var a= prompt("Enter your name")
-// document.writeln("Hello",a)
+//     // var, let and const
+// // var a= prompt("Enter your name")
+// // document.writeln("Hello",a)
 
-var num1 = Number(prompt("Enter 1st number"))
-// alert(num1, "Frist Number")
-var num2 = Number(prompt("Enter 2nd number"))
-// alert(num2, "Second Number")
+// var num1 = Number(prompt("Enter 1st number"))
+// // alert(num1, "Frist Number")
+// var num2 = Number(prompt("Enter 2nd number"))
+// // alert(num2, "Second Number")
 
-var sum = num1 +num2 
-// document.writeln(sum)
-document.writeln(num1 + num2)
+// var sum = num1 +num2 
+// // document.writeln(sum)
+// document.writeln(num1 + num2)
 
+var weight = (prompt("Enter weight"))
+var height = (prompt("Enter height"))
+
+var bmi= (weight/(height*height))
+document.writeln(bmi)
 </script>
 </body>
 </html>
+
